# Hang-man

./: .gitignore  README.md  setup.cfg
hangman/: __main__.py  game.py  game_as_class.py  resources.py
