[metadata]
name = hang-a-man
version = attr: hangman.__version__

author = Benjamin Hallenrud

description = Just the classic game 
long_description = file: README.md

License = MIT

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
packages = find:

install_requires = 
    random-word==1.0.7

[options.packages.find]
exclude =
    test

[options.entry_points]
console_scripts =
    hang-a-man = hangman.game:game